# witchcraft-rust-logging

./: .gitattributes  .gitignore  Cargo.toml  README.md  test.txt  update.sh
.circleci/: config.yml
.palantir/: autorelease.yml
witchcraft-env-logger/: Cargo.toml
witchcraft-env-logger/examples/: main.rs
witchcraft-env-logger/src/: lib.rs
witchcraft-log/: Cargo.toml
witchcraft-log-util/: Cargo.toml
witchcraft-log-util/src/: filter.rs  lib.rs  mdc.rs  service.rs
witchcraft-log/src/: bridge.rs  level.rs  lib.rs  logger.rs  macros.rs  mdc.rs  private.rs  record.rs  test.rs
witchcraft-logging-api/: Cargo.toml  build.rs  witchcraft-logging-api.json
witchcraft-logging-api/src/: lib.rs
witchcraft-metrics/: Cargo.toml
witchcraft-metrics/src/: clock.rs  counter.rs  exemplar.rs  gauge.rs  histogram.rs  lib.rs  meter.rs  metric_id.rs  registry.rs  reservoir.rs  timer.rs
witchcraft-metrics/src/reservoir/: exponentially_decaying.rs  mod.rs
