[package]
name = "witchcraft-env-logger"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
description = "A simple Witchcraft logger that can be configured with an environment variable"
repository = "https://github.com/palantir/witchcraft-rust-logging"
categories = ["development-tools::debugging"]

[dependencies]
conjure-serde = "4.10.0"
witchcraft-log = { version = "4.1.0", path = "../witchcraft-log" }
witchcraft-log-util = { version = "1.0.0", path = "../witchcraft-log-util" }
