[package]
name = "witchcraft-log-util"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
description = "Utilities for Witchcraft logger implementations"
repository = "https://github.com/palantir/witchcraft-rust-logging"

[dependencies]
conjure-error = "4.10.0"
conjure-object = "4.10.0"
sequence_trie = "0.3.6"
witchcraft-log = { version = "4.0.0", path = "../witchcraft-log" }
witchcraft-logging-api = { version = "1.0.0", path = "../witchcraft-logging-api" }
