[package]
name = "witchcraft-log-util"
version = "2.0.0-rc2"
edition = "2024"
license = "Apache-2.0"
description = "Utilities for Witchcraft logger implementations"
repository = "https://github.com/palantir/witchcraft-rust-logging"

[dependencies]
conjure-error = "5.0.0"
conjure-object = "5.0.0"
sequence_trie = "0.3.6"
witchcraft-log = { version = "5.0.0-rc1", path = "../witchcraft-log" }
witchcraft-logging-api = { version = "2.0.0-rc2", path = "../witchcraft-logging-api" }
