[package]
name = "witchcraft-log"
version = "2.0.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A structured logging facade for Witchcraft servers"
repository = "https://github.com/palantir/witchcraft-rust-logging"
categories = ["development-tools::debugging"]

[dependencies]
conjure-error = "3"
conjure-object = "2"
erased-serde = "0.3"
lazycell = "1.0"
log = "0.4"
once_cell = "1"
serde = "1.0"

[dev-dependencies]
serde_test = "1.0"
serde-value = "0.7"
