[package]
name = "witchcraft-log"
version = "4.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A structured logging facade for Witchcraft servers"
repository = "https://github.com/palantir/witchcraft-rust-logging"
categories = ["development-tools::debugging"]

[dependencies]
conjure-error = "5.0.0-rc3"
conjure-object = "5.0.0-rc3"
erased-serde = "0.4"
log = "0.4"
pin-project = "1.1.5"
serde = "1.0"

[dev-dependencies]
futures-executor = "0.3.30"
serde-value = "0.7"
serde_test = "1.0"
