[package]
name = "witchcraft-metrics"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A general-purpose metrics library"
repository = "https://github.com/palantir/witchcraft-rust-logging"
categories = ["development-tools::profiling"]

[dependencies]
exponential-decay-histogram = "0.1"
parking_lot = "0.10"
serde = "1.0"
serde-value = "0.6"

[dev-dependencies]
assert_approx_eq = "1.1"
